--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <label for="fname">First name:</label><br>
     <input type="text" id="fname" name="fname"><br>
     <label for="lname">Last name:</label><br>
-    <input type="text" id="lname" name="lname">
-    <label for="age">Age:</label><br>
-    <input type="text" id="age" name="Age">
+    <input type="text" id="lname" name="lname"><br>
+    <label for="age">Age</label><br>
+    <input type="text" id="age" name="Age"><br>
     <label for="gender">Gender:</label><br>
-    <input type="text" id="gender" name="gender">
+    <input type="text" id="gender" name="gender"><br>
 </form>
 
 
