Test CI/CD - Using both self-hosted runner

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <input type="text" id="age" name="Age"><br>
     <label for="gender">Gender:</label><br>
     <input type="text" id="gender" name="gender"><br>
+    <label for="Maritul_Status">Maritul Status:</label><br>
+    <input type="text" id="aritul_Status" name="aritul_Status"><br>
 </form>
 
 
