--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <input type="text" id="gender" name="gender"><br>
     <label for="Maritul_Status">Maritul Status:</label><br>
     <input type="text" id="aritul_Status" name="aritul_Status"><br>
+    <label for="Submit">Submit:</label><br>
+    <input type="button" id ="button" name="button"><br>
 </form>
 
 
