Test CI/CD - Seperate workflows

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <input type="text" id="gender" name="gender"><br>
     <label for="Maritul_Status">Maritul Status:</label><br>
     <input type="text" id="aritul_Status" name="aritul_Status"><br>
-    <label for="Submit">Submit:</label><br>
-    <input type="button" id ="button" name="button"><br>
+    <input type="button" id ="button" name="button">Submit<br>
 </form>
 
 
